
Mon Mar 27 09:17:06 1995 Chris Provenzano  (proven@mit.edu)

	* movemail.c: Fixups to get movemail to compile.

Thu Mar  2 12:28:04 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:56:05 1995  Theodore Y. Ts'o  <tytso@dcl>

	* movemail.c: Add proper #ifdef's to #include the appropriate
		system header files.

	* configure.in: Replace check for -lsocket and -lnsl with
	        WITH_NETLIB check.

Tue Feb 28 01:53:27 1995  John Gilmore  (gnu at toad.com)

	* movemail.c:  Avoid <krb5/...> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * movemail.c Call krb5_sendauth() with new calling convention.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Sep 29 22:52:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change

Thu Aug 18 14:54:33 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in:
	* movemail.c: Add NEED_SYS_FCNTL_H

	* Makefile.in: Add $(LIBS) declaration on link line.

Tue Aug  9 21:11:54 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in:
	* configure.in: make install fixes

	* movemail.c: fix spelling error
