@@ -6,5 +6,6 @@ KRB_INCLUDE
 WITH_NETLIB
 AC_PROG_INSTALL
 CHECK_FCNTL
+AC_HAVE_HEADERS(unistd.h)
 WITH_KRB5ROOT
 V5_AC_OUTPUT_MAKEFILE
