@@ -1,3 +1,7 @@
+Fri Mar 31 21:24:48 1995  Theodore Y. Ts'o  (tytso@dcl)
+
+	* configure.in, movemail.c: Use configure to see if unistd.h needs
+		to be included.  Remove leftover hair from emacs config.
 
 Mon Mar 27 09:17:06 1995 Chris Provenzano  (proven@mit.edu)
 
